--- a/index.html
+++ b/index.html
@@ -11,12 +11,36 @@
     <!--<a href="https://github.com/ShinyStar/SnowCrystals"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Check out on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>-->
 
     <h1 style="display:inline; color:white"><del>I don't want to draw ahem</del> Tree Generator</h1>  by <a href="https://twitter.com/SilviShinyStar">SilviShinyStar</a><br><hr>
-    <div style="text-align:left; margin:15px;padding:15px;border:2px solid saddlebrown;position:absolute;box-shadow:0 0 3px saddlebrown; background-color: #fcdd95">
+    <div style="text-align:center; margin:15px;padding:15px;border:2px solid saddlebrown;position:absolute;box-shadow:0 0 3px saddlebrown; background-color: #fcdd95">
         <b>Options</b><hr>
+        <img src="leaveTypes.png">
+        <br><hr>
+        Shape: 
+        <select id="type">
+            <option value="random">Random</option>
+            <option value="0" selected>0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+        </select>
         <br>
+        Color:
+        <select id="color">
+            <option value="random">Random</option>
+            <option value="0" selected>0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+        </select>
         <br><br>
+        <br>
         <button id="generate" onClick="createTree(100, 600)" style="width:200px;height:50px;font-size:1.5em;">Generate!</button>
-        <br><br><br>
         <br>
     </div>
     <canvas id="canvas" width=1000 height=1000></canvas>
